<?xml version="1.0"?>
<package>
  <name>fcu_core</name>
  <version>0.0.0</version>

  <description>
    This is an offboard project of aerial robot.
  </description>

  <maintainer email="jackypan@fancinnov.com">JackyPan</maintainer>

  <license>private</license>

  <author email="jackypan@fancinnov.com">JackyPan</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>quadrotor_msgs</build_depend>

  <run_depend>quadrotor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>serial</run_depend>
  <run_depend>octomap</run_depend>

  <export>
  </export>
</package>
